# bilbo

./: .env.example  .gitignore  Cargo.toml  README.md  astro.config.mjs  default.nix  docker-compose.yml  flake.nix  netlify.toml  package-lock.json  package.json  shell.nix
.github/workflows/: build.yml
migrations/: 20260219000001_init.sql
public/: robots.txt
scripts/: import.ts
src/: api.rs  app.rs  env.d.ts  error.rs  lib.rs  main.rs  middleware.ts
src/components/: ChatIsland.tsx  DiscussionIsland.tsx  ResellerLinks.astro  SearchIsland.tsx  TagBadge.astro  book_table.rs  chat_widget.rs  layout.rs  mod.rs  reseller_links.rs  search_bar.rs  tag_badge.rs
src/layouts/: Base.astro
src/lib/: db.ts  markdown.ts  mistral.ts  qdrant.ts  supabase.ts  types.ts
src/model/: book.rs
src/pages/: book_detail.rs  chat.astro  chat.rs  discussion.astro  home.rs  index.astro  login.astro  mod.rs  sitemap.xml.ts
src/pages/api/: chat.ts  discussion.ts  list-authors.ts  list-tags.ts  search.ts
src/pages/auth/: callback.ts
src/pages/book/: [reference].astro
src/server/: api.rs  db.rs  import.rs  markdown.rs  mistral.rs  mod.rs  qdrant.rs  search.rs  state.rs
src/styles/: main.scss
style/: main.scss
