[package]
name = "bilbo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos_axum = { version = "0.8", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
console_error_panic_hook = { version = "0.1", optional = true }

# SSR dependencies
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"], optional = true }
qdrant-client = { version = "~1.13", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
pulldown-cmark = { version = "0.12", optional = true }
gray_matter = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
http = { version = "1", optional = true }

# Hydrate dependencies
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos/nightly",
    "leptos_router/nightly",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos/nightly",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_router/nightly",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:qdrant-client",
    "dep:reqwest",
    "dep:pulldown-cmark",
    "dep:gray_matter",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:http",
]

[package.metadata.leptos]
output-name = "bilbo"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
watch-additional-files = ["style"]
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
style-file = "style/main.scss"
assets-dir = "public"
